==> guesswho461/cakeio/ow/OneWire.c <==
#include "OneWire.h"

static void OW_ToBits(uint8_t owByte, uint8_t *owBits)
{
	uint8_t i;
	for (i = 0; i < 8; i++)
	{
		if (owByte & 0x01)
		{
			*owBits = OW_1;
		}
		else
		{
			*owBits = OW_0;
		}
		owBits++;
		owByte = owByte >> 1;
	}
}

static uint8_t OW_ToByte(uint8_t *owBits)
{
	uint8_t owByte, i;
	owByte = 0;
	for (i = 0; i < 8; i++)
	{
		owByte = owByte >> 1;
		if (*owBits == OW_R_1)
		{
			owByte |= 0x80;
		}
		owBits++;
	}

	return owByte;
}

uint8_t OW_Reset(OneWire_HandleTypeDef* ow)
{
	uint8_t owPresence = 0xf0;

	OW_UART_Init(ow, 9600);

	HAL_UART_Receive_DMA(ow->huart, &owPresence, 1);
	//HAL_UART_Transmit(ow->huart, &owPresence, 1, HAL_MAX_DELAY);
	HAL_UART_Transmit_DMA(ow->huart, &owPresence, 1);

	/*## Wait for the end of the transfer ###################################*/
	while (HAL_UART_GetState(ow->huart) != HAL_UART_STATE_READY)
	{
		__NOP();
	}

	OW_UART_Init(ow, 115200);

	if (owPresence != 0xf0)
	{
		return OW_OK;
	}

	return OW_NO_DEVICE;
}

uint8_t OW_Send(OneWire_HandleTypeDef* ow, uint8_t *command, uint8_t cLen, uint8_t *data, uint8_t dLen, uint8_t readStart)
{
	if (OW_Reset(ow) == OW_NO_DEVICE)
	{
		return OW_NO_DEVICE;
	}

	while (cLen > 0)
	{

		OW_ToBits(*command, ow->ROM_NO);
		command++;
		cLen--;

		HAL_UART_Receive_DMA(ow->huart, ow->ROM_NO, sizeof(ow->ROM_NO) / sizeof(ow->ROM_NO[0]));
		HAL_UART_Transmit_DMA(ow->huart, ow->ROM_NO, sizeof(ow->ROM_NO) / sizeof(ow->ROM_NO[0]));

		while (HAL_UART_GetState(ow->huart) != HAL_UART_STATE_READY)
		{
			__NOP();
		}

		if (readStart == 0 && dLen > 0)
		{
			*data = OW_ToByte(ow->ROM_NO);
			data++;
			dLen--;
		}
		else
		{
			if (readStart != OW_NO_READ)
			{
				readStart--;
			}
		}
	}

	return OW_OK;
}

static void OW_SendBits(OneWire_HandleTypeDef* ow, uint8_t numBits)
{
	HAL_UART_Receive_DMA(ow->huart, ow->ROM_NO, numBits);
	HAL_UART_Transmit_DMA(ow->huart, ow->ROM_NO, numBits);

	while (HAL_UART_GetState(ow->huart) != HAL_UART_STATE_READY)
	{
		__NOP();
	}
}
